fix navbar on smaller devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -219,3 +219,12 @@
 .w-md-editor-toolbar {
 	padding: 10px !important;
 }
+
+@layer base {
+	* {
+		@apply border-[hsl(var(--border))];
+	}
+	body {
+		@apply bg-[hsl(var(--background))] text-[hsl(var(--foreground))];
+	}
+}
